# Droot

./: README.md  droot.py  pyproject.toml  run.py
.github/workflows/: publish.yml
src/: autotest.py
src/droots/: __main__.py
src/drt/templates/src/core/: main.py
