[project]
name = "droot"
version = "0.1.0"
description = "Generate structured Python project folders instantly"
authors = [{ name = "Caleb M. Sibanda", email = "darkian.dev@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.scripts]
droot = "droot:menu"

[tool.setuptools]
packages = ["src.droot", "src.droot.templates"]
package-dir = { "" = "src" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"